fixed alignment issues on navigation bar using position: absolute

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -64,35 +64,49 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
-/*
-main {
+
+.main-content-area {
 	width: 900px;
 	display: block;
 	margin: auto;
+	margin-top: 20px;
 }
+
+.main-nav {
+	margin: auto;
+	/*text-align: center;*/
+	width: 900px;
+	height: 100px;
+	position: relative;
+}
+
+nav div {
+	display: inline-block;
+	/*height: 60px;*/
+	margin: 20px;
+}
+
+nav a {
+	display: inline-block;
+	padding: 20px;
+	text-decoration: none;
+	color: gray;
+	font-size: 15px;
+
+}
+
+.logo {
+	position: absolute;
+}
+
+/*
 header {
 	height: 80px;
 	padding: 5px;
 	margin: auto;
 	vertical-align: middle;
 }
-nav {
-	display: inline-block;
-}
-nav a {
-	text-decoration: none;
-	color: gray;
-	font-size: 15px;
-	font-family: Helvetica;
-	width: 60px;
-	height: 20px;
-	padding: 20px;
-}
-.logo {
-	display: inline-block;
-	padding: 20px;
-	margin: 0px 0px 0px 50px;
-}
+
 
 h1 {
 	box-sizing: border-box;
